[gd_scene load_steps=9 format=3 uid="uid://ba1liivexdd1"]

[ext_resource type="Script" path="res://scripts/tower_projectile.gd" id="1_qxwyy"]
[ext_resource type="Script" path="res://scripts/disable_on_timeout.gd" id="2_tcnc8"]
[ext_resource type="SpriteFrames" uid="uid://dw4uikeh51bsk" path="res://test.tres" id="3_gk0jf"]
[ext_resource type="AudioStream" uid="uid://duo0050tj5x20" path="res://assets/music/Sounds/fire_startup_sound.wav" id="4_jq5fn"]

[sub_resource type="Animation" id="Animation_6tahy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Clip/LightBeamSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Clip/LightBeamSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_btp53"]
resource_name = "beam"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Clip/LightBeamSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(32, 2.08165e-12), Vector2(30, 2.08165e-12), Vector2(36, 2.08165e-12), Vector2(34, 2.08165e-12), Vector2(38, 2.08165e-12), Vector2(34, 2.08165e-12), Vector2(30, 2.08165e-12), Vector2(34, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Clip/LightBeamSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.995936, 1), Vector2(0.983815, 1), Vector2(0.963843, 1), Vector2(0.936362, 1), Vector2(0.901843, 1), Vector2(0.860876, 1), Vector2(0.814162, 1), Vector2(0.7625, 1), Vector2(0.706775, 1), Vector2(0.647939, 1), Vector2(0.587, 1), Vector2(0.525, 1), Vector2(0.607483, 1), Vector2(0.68746, 1), Vector2(0.7625, 1), Vector2(0.830324, 1), Vector2(0.888871, 1), Vector2(0.936362, 1), Vector2(0.971354, 1), Vector2(0.992784, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjbqo"]
_data = {
"RESET": SubResource("Animation_6tahy"),
"beam": SubResource("Animation_btp53")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h0kn"]
size = Vector2(24, 1920)

[node name="LightBeam" type="Node2D"]
script = ExtResource("1_qxwyy")
speed = 0
damage = 25
destroy_on_hit = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 1.5
libraries = {
"": SubResource("AnimationLibrary_wjbqo")
}

[node name="EnableDamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="DisableDamageTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(3.81598e-07, -1.33096e-22)
rotation = -1.5708
collision_layer = 32
collision_mask = 16
monitoring = false
monitorable = false
script = ExtResource("2_tcnc8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.08165e-12, 960)
shape = SubResource("RectangleShape2D_4h0kn")

[node name="Clip" type="TextureRect" parent="."]
clip_contents = true
offset_left = -12.0
offset_right = 52.0
offset_bottom = 1920.0
rotation = 4.71239
pivot_offset = Vector2(32, 2.08165e-12)

[node name="LightBeamSprite" type="AnimatedSprite2D" parent="Clip"]
position = Vector2(30, 2.08165e-12)
sprite_frames = ExtResource("3_gk0jf")
autoplay = "default"
frame = 1
offset = Vector2(2.08165e-12, 960)

[node name="ProjectileAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jq5fn")

[connection signal="timeout" from="EnableDamageTimer" to="." method="_on_enable_damage_timer_timeout"]
[connection signal="timeout" from="EnableDamageTimer" to="Area2D" method="_enable_damage_timer_timeout"]
[connection signal="timeout" from="DisableDamageTimer" to="Area2D" method="_disable_damage_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
